// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Alert Danger 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-AxjAm jjmQyk sc-fznyAO hRCpfl"
      role="alert"
    >
      <svg
        aria-hidden="true"
        class="sc-AxirZ eSGrht"
        color="#cc1439"
        fill="#cc1439"
        focusable="false"
        height="24px"
        icon="error"
        mr="x1"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <div
        class="Box-sc-1qu1edy-0 iDnpba"
      >
        Danger alert
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Alert Informative 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-AxjAm iElDdL sc-fznyAO hRCpfl"
      role="alert"
    >
      <div
        class="Box-sc-1qu1edy-0 iDnpba"
      >
        Informative alert
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Alert Success 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-AxjAm cDxYdm sc-fznyAO hRCpfl"
      role="alert"
    >
      <svg
        aria-hidden="true"
        class="sc-AxirZ fYYMXW"
        color="#008059"
        fill="#008059"
        focusable="false"
        height="24px"
        icon="check"
        mr="x1"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
      <div
        class="Box-sc-1qu1edy-0 iDnpba"
      >
        Success alert
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Alert Warning 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-AxjAm dKTmNP sc-fznyAO hRCpfl"
      role="alert"
    >
      <div
        class="Box-sc-1qu1edy-0 iDnpba"
      >
        Warning alert
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Alert With a close button 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-AxjAm iElDdL sc-fznyAO hRCpfl"
      role="alert"
    >
      <div
        class="Box-sc-1qu1edy-0 iDnpba"
      >
        Warning alert
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
      >
        <button
          aria-label="Close"
          class="Link-sc-1lpx3d0-0 iYMUBq"
          color="darkGrey"
        >
          <svg
            aria-hidden="true"
            class="sc-AxirZ cAfXLi"
            color="currentColor"
            fill="currentColor"
            focusable="false"
            height="16"
            icon="close"
            size="16"
            viewBox="0 0 24 24"
            width="16"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Alert With a link 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-AxjAm iElDdL sc-fznyAO hRCpfl"
      role="alert"
    >
      <div
        class="Box-sc-1qu1edy-0 iDnpba"
      >
        An alert with 
        <a
          class="Link-sc-1lpx3d0-0 geMpSb"
          color="blue"
          href="/"
        >
          linked details
        </a>
        .
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Alert With a title 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-AxjAm jjmQyk sc-fznyAO hRCpfl"
      role="alert"
    >
      <svg
        aria-hidden="true"
        class="sc-AxirZ eSGrht"
        color="#cc1439"
        fill="#cc1439"
        focusable="false"
        height="24px"
        icon="error"
        mr="x1"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <div
        class="Box-sc-1qu1edy-0 iDnpba"
      >
        <p
          class="sc-AxhCb lgbEcN"
          color="currentColor"
          font-size="16px"
          font-weight="bold"
        >
          Danger title!
        </p>
        Danger alert
      </div>
    </div>
  </div>
</div>
`;
